--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="{% url 'snack_list' %}">Home</a></li>
         </ul>
     </nav>
 </header>
