--- a/templates/snack_detail.html
+++ b/templates/snack_detail.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<h1>Detail View coming soon</h1>
+<h1>{{snack.title}} Details</h1>
+<p>purchased by {{snack.purchaser}}</p>
+<p>{{snack.description}}</p>
 
+<a href="{% url 'snack_delete' snack.pk %}">eat this snack</a>
 
 {% endblock content %}
