all views render and forms run successfully

--- a/templates/snack_create.html
+++ b/templates/snack_create.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 
-<h1>Create View comming soon!</h1>
+<h1>Add a snack!</h1>
 
-
-
-
+<form action="" method="POST">
+{% csrf_token %}
+{{ form.as_p }}
+<input type="submit" value="SAVE">
+</form>
 
 {% endblock content %}
