--- a/templates/snack_update.html
+++ b/templates/snack_update.html
@@ -3,7 +3,14 @@
 
 {% block content %}
 
-<h1>Update View coming soon</h1>
+<h1>Update Snack</h1>
+
+<form action="" Method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="SAVE">
+
+</form>
 
 
 {% endblock content %}
